[package]
name = "smush"
version = "0.1.6"
authors = ["Graham Wihlidal <graham@wihlidal.ca>"]
description = "Common rust abstraction around a variety of compression codecs."
homepage = "https://github.com/gwihlidal/smush-rs"
repository = "https://github.com/gwihlidal/smush-rs"
readme = "README.md"
keywords = ["data", "encode", "compress", "decompress", "pipeline"]
license = "MIT/Apache-2.0"
edition = "2018"

[badges]
travis-ci = { repository = "gwihlidal/smush-rs" }
maintenance = { status = "actively-developed" }

[profile.release]
lto = true
opt-level = 3
codegen-units = 1

[dependencies]
bincode = { version = "1.2.1",            optional = true, default-features = false }
brotli  = { version = "3.3.0",            optional = true, default-features = false, features = ["std"] }
bs58    = { version = "0.3.0",            optional = true, default-features = false, features = ["std"] }
bzip2   = { version = "0.4",              optional = true, default-features = false, git = "https://github.com/alexcrichton/bzip2-rs" }
flate2  = { version = "1.0.13",           optional = true, default-features = false, features = ["rust_backend"] }
lz4     = { version = "1.23.1",           optional = true, default-features = false }
xz2     = { version = "0.1.6",            optional = true, default-features = false }
zstd    = { version = "0.5.1+zstd.1.4.4", optional = true, default-features = false }

[features]
default = ["all"]
all = [
    "base58_support",
    "bincode_support",
    "brotli_support",
    "bzip2_support",
    "deflate_support",
    "gzip_support",
    "lz4_support",
    "xz_support",
    "zlib_support",
    "zstd_support",
]
base58_support = ["bs58"]
bincode_support = ["bincode"]
brotli_support = ["brotli"]
bzip2_support = ["bzip2"]
deflate_support = ["flate2"]
gzip_support = ["flate2"]
lz4_support = ["lz4"]
xz_support = ["xz2"]
zlib_support = ["flate2"]
zstd_support = ["zstd"]
